--- a/k8s/helm/Chart.yaml
+++ b/k8s/helm/Chart.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
-description: Bookinfo Ratings Service Helm Chart
-name: bookinfo-ratings
+description: Bookinfo Details Service Helm Chart
+name: bookinfo-details
 version: 1.0.0
 appVersion: 1.0.0
-home: https://bookinfo.dev.opsta.net/student14/ratings
+home: https://bookinfo.dev.opsta.net/student14/details
 maintainers:
   - name: student14
     email: devop014@mail.kmutt.ac.th
 sources:
-  - https://github.com/jakkapongqcue/bookinfo-ratings
+  - https://github.com/jakkapongqcue/bookinfo-details
