--- a/k8s/helm-values/values-bookinfo-dev-details.yaml
+++ b/k8s/helm-values/values-bookinfo-dev-details.yaml
@@ -1,6 +1,6 @@
 details:
-  namespace: student14-bookinfo-dev
-  image: ghcr.io/jakkapongqcue/bookinfo-details
+  namespace: student12/-bookinfo-dev
+  image: ghcr.io/bazukaaa/bookinfo-details
   tag: dev
   replicas: 1
   imagePullSecrets: registry-bookinfo
@@ -12,5 +12,5 @@ ingress:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
   host: bookinfo.dev.opsta.net
-  path: "/student14/details(/|$)(.*)"
+  path: "/student128/details(/|$)(.*)"
   serviceType: ClusterIP
