--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   details:
     build: .
-    image: ghcr.io/bazukaaa/bookinfo-details:dev
+    image: ghcr.io/bazukaaa/bookinfo-details:prd
     ports:
       - "9080:9080"
